--- a/src/order.html
+++ b/src/order.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Project 2 Index</title>
+  <title>Order Project 2</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="robots" content="index,follow">
   <meta name="description" content="TODO: Project 2 ...">
@@ -14,45 +14,35 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <style>
-body, html {
-  height: 100%;
-  margin: 0;
-  font-family:'Times New Roman', Times, serif
+    body, html {
+      height: 100%;
+      margin: 0;
+      font-family:'Times New Roman', Times, serif
+    }
+  .container {
+  border-radius: 5px;
+  background-color: lightgrey;
+  padding: 10px;
 }
-.heros{
-  background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/myriam-zilles-KltoLK6Mk-g-unsplash.jpg");
-  height: 100%;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: relative;
+input[type=text], select, textarea {
+  width: 100%;
+  padding: 0;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical;
 }
-.heroen{
-  text-align: center;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  color: white;
-}
-.heroen button {
-  border: none;
-  outline: 0;
-  display: inline-block;
-  padding: 10px 25px;
-  text-align: center;
-  cursor: pointer;
-  background-color: lightblue;
-}
-.heroen button:hover{
-   color: black;
-}
-.footer {
+    .footer {
+      position: fixed;
    left: 0;
    bottom: 0;
    width: 100%;
    background-color: #2f2f2f;
    color: white;
    text-align: center;
+   margin-top: auto 0;
 }
 @media screen
 and (device-width: 360px)
@@ -65,7 +55,7 @@ and (min-device-width: 1200px)
 and (min-device-width: 1600px)
 and (-webkit-min-device-pixel-ratio: 2)
 and (min-resolution: 192dpi){
-
+  
 }
 @media only screen  
 and (min-device-width: 768px)
@@ -77,7 +67,6 @@ and (-webkit-min-device-pixel-ratio: 2){
 </head>
 
 <body>
-<div class="heros">
   <nav class="navbar navbar-inverse">
     <div class="container-fluid">
       <div class="navbar-header">
@@ -92,14 +81,31 @@ and (-webkit-min-device-pixel-ratio: 2){
       </ul>
     </div>
   </nav>
-  
-    <div class="heroen">
-      <h1 style="font-size:60px">Rx Finders</h1>
-      <p>Here to Help Find Medications</p>
-      <a href="find.html" class="btn btn-primary">Click to Find a Pharmacy</a>
-    </div>
-  </div>
-  
+ <form class="container">
+  <label for="fname">First Name:</label>
+  <input type="text">
+  <br>
+  <label for="lname">Last Name:</label>
+  <input type="text">
+  <br>
+  <label for="Address">Address:</label>
+  <input type="text">
+  <br>
+  <label for="PhoneNumber">Phone Number:</label>
+  <input type="text">
+  <br>
+    <label for="NameOnCard">Name On Card:</label>
+    <input type="text">
+    <br>
+    <label for="CardNumber">Card Number:</label>
+    <input type="text">
+    <br>
+    <label for="CVV">CVV:</label>
+    <input type="text">
+    <br>
+    <br>
+    <input type="submit" value="Submit" class="btn btn-primary">
+   </form>
   <footer class="footer text-center">
   <div class="footer-bottom">
     <p>&copy; 2023 Rx Finders. All rights reserved. | <a href="contact.html">Contact Us</a></p>
