--- a/src/contact.html
+++ b/src/contact.html
@@ -85,3 +85,6 @@ input[type=text], select, textarea {
  <a href="#" class="fa fa-linkedin"></a>
  <a href="#" class="fa fa-youtube"></a>
 </footer>
+
+</body>
+</html>
