final change for project 2

--- a/src/find.html
+++ b/src/find.html
@@ -14,11 +14,6 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <style>
-body, html {
-  height: 100%;
-  margin: 0;
-  font-family:'Times New Roman', Times, serif
-}
 .heros{
   background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/thom-holmes-J2e34-1CVVs-unsplash.jpg");
   height: 100%;
@@ -94,7 +89,7 @@ input[type=search]{
   </nav>
     <div class="heroen">
       <h1 style="font-size:60px">Rx Finders</h1>
-      <p>Here to Help Find Medications</p>
+      <h4>Here to Help Find Medications</h4>
       <label for="gMaps">Google Maps Search</label>
       <input type="search" id="gmaps">
       <input type="submit" class="btn btn-primary">
