--- a/src/index.html
+++ b/src/index.html
@@ -54,9 +54,7 @@ body, html {
    color: white;
    text-align: center;
 }
-nav {
-  display: flex;
-}
+
   </style>
 </head>
 <body>
@@ -77,9 +75,9 @@ nav {
   </nav>
   
     <div class="heroen">
-      <h1 style="font-size:60px">Rx Finders</h1>
-      <p>Here to Help Find Medications</p>
-      <a href="find.html" class="btn btn-primary">Click to Find a Pharmacy</a>
+      <h1>Rx Finders</h1>
+      <h4>Here to Help Find Medications</h4>
+      <a href="find.html" style="size:50px;" class="btn btn-primary">Click to Find a Pharmacy</a>
     </div>
   </div>
   
